--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -157,6 +157,7 @@ a
       display none
     header
       height 40px
+      line-height 37px
       &:after
         clear none
       .widget-toolbar
@@ -180,6 +181,8 @@ a
         margin 0 0 0 17px
         vertical-align middle
         width 495px
+        max-height 39px
+        overflow hidden
         font-size 18px
         font-weight bold
         &.small
@@ -192,11 +195,11 @@ a
       .fa-relations
         float right
         font-size 16px
-        display none
+        opacity 0
       .fa-sitemap
         float right
         margin-right 10px
-        display none
+        opacity 0
       .likes
         text-align right
         a
