--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -18,9 +18,8 @@ a {
   background-color: #438eb9 !important;
 }
 .container {
-  width: 990px;
   padding: 0;
-  max-width: none;
+  max-width: 1240px;
   min-height: 100%;
 }
 .ace-nav>li a {
@@ -62,6 +61,17 @@ a {
 .nav-list > li.active > a,
 .nav-list > li.active:hover a {
   font-size: 15px;
+}
+.sidebar#sidebar {
+  height: 100%;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  z-index: 2;
+}
+.sidebar#sidebar .show-left {
+  display: none;
 }
 .btn {
   border-radius: 2px !important;
@@ -116,12 +126,10 @@ a {
 .options {
   padding: 8px 0 5px 10px;
   height: 44px;
+  text-align: center;
 }
 .options .form-group {
-  width: 525px;
-  margin: 0 0 0 12px;
-  display: inline-block;
-  float: left;
+  margin: 0 130px 0 120px;
 }
 .options .form-group input {
   height: 30px;
@@ -198,7 +206,6 @@ a {
   display: inline-block;
   margin: 0 0 0 17px;
   vertical-align: middle;
-  width: 495px;
   max-height: 39px;
   overflow: hidden;
   font-size: 18px;
@@ -370,4 +377,37 @@ a {
 }
 .dd>.dd-list>.topic-item.list-view>.dd-list {
   padding-left: 30px;
+}
+@media all and (max-width: 768px),screen and (device-width: 320px) {
+  .sidebar#sidebar {
+    margin-left: -190px;
+  }
+  .sidebar#sidebar .show-left {
+    display: block;
+    position: fixed;
+    top: 40%;
+    left: -22px;
+    border-radius: 5px 5px 0 0;
+    cursor: pointer;
+    font-size: 16px;
+    letter-spacing: 1px;
+    border: 1px solid #ccc;
+    background: #ccc;
+    padding: 0 10px;
+    -moz-transform: rotate(90deg);
+/* Для Firefox */
+    -ms-transform: rotate(90deg);
+/* Для IE */
+    -webkit-transform: rotate(90deg);
+/* Для Safari, Chrome, iOS */
+    -o-transform: rotate(90deg);
+/* Для Opera */
+    transform: rotate(90deg);
+  }
+  .container {
+    width: 100%;
+  }
+  .container .main-content {
+    margin-left: 0;
+  }
 }
