--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -20,6 +20,7 @@ a {
 .container {
   padding: 0;
   max-width: 1240px;
+  min-width: 753px;
   min-height: 100%;
 }
 .ace-nav>li a {
@@ -77,7 +78,7 @@ a {
   border-radius: 2px !important;
 }
 .submenu {
-  padding: 5px 0;
+  padding: 5px 0 2px 0;
   background: #d9edf7;
 }
 .submenu >ul {
@@ -88,8 +89,9 @@ a {
 }
 .submenu >ul li {
   list-style: none;
-  float: left;
+  display: inline-block;
   margin-left: 5px;
+  margin-bottom: 5px;
   border-top: 3px solid #6fb3e0;
   border-radius: 2px;
 }
@@ -106,6 +108,7 @@ a {
 }
 .submenu .btn-group {
   margin-left: 5px;
+  border-top: 0;
 }
 .submenu .btn-group.active .btn {
   border-color: #2b7dbc;
@@ -203,8 +206,7 @@ a {
   text-decoration: none;
 }
 .topic-item .topic-descr header h2 {
-  display: inline-block;
-  margin: 0 0 0 17px;
+  margin: 0 100px 0 110px;
   vertical-align: middle;
   max-height: 39px;
   overflow: hidden;
@@ -215,7 +217,7 @@ a {
   font-size: 16px;
 }
 .topic-item .topic-descr header span {
-  display: inline-block;
+  float: left;
   vertical-align: middle;
 }
 .topic-item .topic-descr .topic-right {
