Верстка страницы createTopic

--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -13,6 +13,10 @@ body {
 a {
   outline: none !important;
 }
+h1 {
+  margin-top: 10px;
+  font-size: 24px;
+}
 .btn-primary,
 .header-color-blue2 {
   background-color: #438eb9 !important;
@@ -112,6 +116,15 @@ a {
 }
 .submenu .btn-group.active .btn {
   border-color: #2b7dbc;
+}
+.submenu .btn-group ul {
+  padding-bottom: 0;
+}
+.submenu .btn-group li {
+  border-top: 0;
+  display: block;
+  margin: 0;
+  margin-bottom: 5px;
 }
 .submenu .btn-group .btn {
   font-size: 14px;
@@ -412,4 +425,14 @@ a {
   .container .main-content {
     margin-left: 0;
   }
+}
+/* создание темы */
+.create-topic {
+  padding: 0 10px;
+}
+.create-topic .wysiwig-box {
+  display: block;
+}
+.create-topic .wysiwyg-editor {
+  border-left: 1px solid #ccc;
 }
