--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -17,6 +17,10 @@ body
 a
   outline none !important
 
+h1
+  margin-top 10px
+  font-size 24px
+
 transform()
   -moz-transform rotate(arguments); /* Для Firefox */
   -ms-transform rotate(arguments); /* Для IE */
@@ -114,6 +118,13 @@ transform()
     border-top 0
     &.active .btn
       border-color #2b7dbc
+    ul
+      padding-bottom 0
+    li
+      border-top 0
+      display block
+      margin 0
+      margin-bottom 5px
     .btn
       font-size 14px
       border 0
@@ -357,3 +368,11 @@ transform()
     width 100%
     .main-content
       margin-left 0
+
+/* создание темы */
+.create-topic
+  padding 0 10px
+  .wysiwig-box
+    display block
+  .wysiwyg-editor
+    border-left 1px solid #ccc
