--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -125,6 +125,8 @@ transform()
       display block
       margin 0
       margin-bottom 5px
+      a
+        font-size 13px
     .btn
       font-size 14px
       border 0
@@ -136,6 +138,9 @@ transform()
 
 .btn-group>.btn
   border-radius main-radius !important
+
+.dropdown-menu
+  min-width 115px
 
 .options
   padding 8px 0 5px 10px
@@ -155,6 +160,7 @@ transform()
     float right
     margin-right 14px
     height 30px
+    text-align left
   .btn-primary
     font-size 14px
     float left
@@ -372,7 +378,12 @@ transform()
 /* создание темы */
 .create-topic
   padding 0 10px
+  >.btn-group
+    float right
+    margin-left 5px
   .wysiwig-box
     display block
+    .pull-left .btn
+      margin-right 5px
   .wysiwyg-editor
     border-left 1px solid #ccc
