--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -17,6 +17,10 @@ body
 a
   outline none !important
 
+h1
+  margin-top 10px
+  font-size 24px
+
 transform()
   -moz-transform rotate(arguments); /* Для Firefox */
   -ms-transform rotate(arguments); /* Для IE */
@@ -114,6 +118,15 @@ transform()
     border-top 0
     &.active .btn
       border-color #2b7dbc
+    ul
+      padding-bottom 0
+    li
+      border-top 0
+      display block
+      margin 0
+      margin-bottom 5px
+      a
+        font-size 13px
     .btn
       font-size 14px
       border 0
@@ -125,6 +138,9 @@ transform()
 
 .btn-group>.btn
   border-radius main-radius !important
+
+.dropdown-menu
+  min-width 115px
 
 .options
   padding 8px 0 5px 10px
@@ -144,6 +160,7 @@ transform()
     float right
     margin-right 14px
     height 30px
+    text-align left
   .btn-primary
     font-size 14px
     float left
@@ -357,3 +374,16 @@ transform()
     width 100%
     .main-content
       margin-left 0
+
+/* создание темы */
+.create-topic
+  padding 0 10px
+  >.btn-group
+    float right
+    margin-left 5px
+  .wysiwig-box
+    display block
+    .pull-left .btn
+      margin-right 5px
+  .wysiwyg-editor
+    border-left 1px solid #ccc
