--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -302,7 +302,7 @@ transform()
         display inline-block
         vertical-align middle
         margin-left 10px
-    &.answer-item
+    &.message-item
       margin 10px 0 10px 0
       .answer-date
         color #808080
@@ -316,13 +316,13 @@ transform()
   padding 0
   margin-bottom 5px
 
-.answer-item
+.message-item
   border-radius second-radius !important
 
 .wysiwig-box
   display none
 
-.answer-item+.wysiwig-box
+.message-item+.wysiwig-box
   border 1px solid #5090c1
 
 .widget-header.fixed
