--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -213,12 +213,18 @@ transform()
       h2
         margin 0 100px 0 110px
         vertical-align middle
-        max-height 39px
+        height 39px
+        line-height 39px;
         overflow hidden
         font-size 18px
         font-weight bold
         &.small
           font-size 16px;
+        span
+          vertical-align middle
+          line-height 18px
+          display inline-block
+          float none
       span
         float left
         vertical-align middle
