--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -309,7 +309,7 @@ transform()
         vertical-align middle
         margin-left 10px
     &.one-message
-      margin 10px 0 10px 0
+      //margin 10px 0
       .answer-date
         color #808080
         float left
@@ -364,6 +364,10 @@ transform()
 
 .dd>.dd-list>.topic-item.list-view>.dd-list
   padding-left 30px
+
+.dd-item
+  min-height 0
+  margin 10px 0
 
 .wysiwyg-editor
   a
