--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -83,7 +83,7 @@ transform()
   top 0
   bottom 0
   position absolute
-  z-index 2
+  z-index 13
   .show-left
     display none
 
@@ -380,6 +380,7 @@ transform()
       display block
       position fixed
       top: 40%
+      z-index 120
       left -22px
       border-radius 5px 5px 0 0
       cursor pointer
@@ -406,3 +407,89 @@ transform()
       margin-right 5px
   .wysiwyg-editor
     border-left 1px solid #ccc
+
+/* профиль */
+.user-descr
+  padding 0 0 0 10px
+  font-size 14px
+  .ava-area
+    float left
+    width 200px
+    padding 10px 0 0 0
+    img
+      width 100%
+    .fa
+      font-size 24px
+    .user-rating
+      text-align center
+      margin 10px 0 10px 0
+  .soc-accounts
+    float right
+    width 180px
+    padding 10px 0 0 0
+    .fa
+      font-size 34px
+      margin 10px 5px 0 5px
+  .text-area
+    margin 0 200px 0 215px
+    .user-head
+      h1
+        display inline-block
+        margin-bottom 0
+      a
+        color #CCCCCC
+      .confirm-alert
+        float right
+        font-weight bold
+        margin 17px 10px 0 0
+    .user-body
+      margin 15px 0 0 0
+      line-height 26px
+      h3
+        font-size 20px
+      span
+        width 170px
+        display inline-block
+
+@media all and (max-width: 1024px)
+  .user-descr
+    .ava-area
+      width 120px
+      .fa
+        font-size 20px
+    .text-area
+      margin 0 180px 0 130px
+
+ /* настройки */
+.settings
+  padding 0 10px
+  .tabbable
+    z-index 5
+  h3
+   margin-top 10px
+  .tab-content
+    margin-bottom 10px
+  .tab-pane
+    label
+      display inline-block
+      width 160px
+    .form-control
+      display inline-block
+      width 200px
+      margin 0 0 10px 0
+    .subs-group
+      display inline-block
+      border-left 1px solid #2b7dbc
+      padding-left 15px
+    .checkbox label
+      width auto
+
+
+#subscription>label
+  text-align right
+  width auto
+  padding-right 10px
+  vertical-align top
+
+
+
