--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -73,7 +73,7 @@ h1 {
   top: 0;
   bottom: 0;
   position: absolute;
-  z-index: 2;
+  z-index: 13;
 }
 .sidebar#sidebar .show-left {
   display: none;
@@ -422,6 +422,7 @@ h1 {
     display: block;
     position: fixed;
     top: 40%;
+    z-index: 120;
     left: -22px;
     border-radius: 5px 5px 0 0;
     cursor: pointer;
@@ -463,4 +464,106 @@ h1 {
 }
 .create-topic .wysiwyg-editor {
   border-left: 1px solid #ccc;
+}
+/* профиль */
+.user-descr {
+  padding: 0 0 0 10px;
+  font-size: 14px;
+}
+.user-descr .ava-area {
+  float: left;
+  width: 200px;
+  padding: 10px 0 0 0;
+}
+.user-descr .ava-area img {
+  width: 100%;
+}
+.user-descr .ava-area .fa {
+  font-size: 24px;
+}
+.user-descr .ava-area .user-rating {
+  text-align: center;
+  margin: 10px 0 10px 0;
+}
+.user-descr .soc-accounts {
+  float: right;
+  width: 180px;
+  padding: 10px 0 0 0;
+}
+.user-descr .soc-accounts .fa {
+  font-size: 34px;
+  margin: 10px 5px 0 5px;
+}
+.user-descr .text-area {
+  margin: 0 200px 0 215px;
+}
+.user-descr .text-area .user-head h1 {
+  display: inline-block;
+  margin-bottom: 0;
+}
+.user-descr .text-area .user-head a {
+  color: #ccc;
+}
+.user-descr .text-area .user-head .confirm-alert {
+  float: right;
+  font-weight: bold;
+  margin: 17px 10px 0 0;
+}
+.user-descr .text-area .user-body {
+  margin: 15px 0 0 0;
+  line-height: 26px;
+}
+.user-descr .text-area .user-body h3 {
+  font-size: 20px;
+}
+.user-descr .text-area .user-body span {
+  width: 170px;
+  display: inline-block;
+}
+@media all and (max-width: 1024px) {
+  .user-descr .ava-area {
+    width: 120px;
+  }
+  .user-descr .ava-area .fa {
+    font-size: 20px;
+  }
+  .user-descr .text-area {
+    margin: 0 180px 0 130px;
+  }
+}
+/* настройки */
+.settings {
+  padding: 0 10px;
+}
+.settings .tabbable {
+  z-index: 5;
+}
+.settings h3 {
+  margin-top: 10px;
+}
+.settings .tab-content {
+  margin-bottom: 10px;
+}
+.settings .tab-pane label {
+  display: inline-block;
+  width: 160px;
+}
+.settings .tab-pane .form-control {
+  display: inline-block;
+  width: 200px;
+  margin: 0 0 10px 0;
+}
+.settings .tab-pane .subs-group {
+  display: inline-block;
+  border-left: 1px solid #2b7dbc;
+  padding-left: 15px;
+}
+.settings .tab-pane .checkbox label {
+  width: auto;
+}
+#subscription>label {
+  text-align: right;
+  width: auto;
+  padding-right: 10px;
+  vertical-align: top;
 }
