--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -398,6 +398,7 @@ transform()
 /* создание темы */
 .create-topic
   padding 0 10px
+  display none
   >.btn-group
     float right
     margin-left 5px
