--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -568,4 +568,16 @@ th.next
     width 150px
     display block
     margin 5px auto 0
+/* регистрация для магазина */
+.shop-reg
+  width 320px
+  h1
+    text-align center
+  .reg-now label
+    width 60px
+  input[type="text"]
+  input[type="email"]
+  input[type="tel"]
+  input[type="password"]
+    width 220px
 
