--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -305,6 +305,11 @@ th.next
   .spinner-up:hover
     background-color rgb(111, 179, 224) !important
 
+.empty-basket
+  font-size 24px
+  text-align center
+  color #ccc
+
 .modal
   width 560px
   left 50%
@@ -376,10 +381,13 @@ th.next
         display block
         td:first-child
           padding-right 0
+          width 70%
         td
           padding 5px
+          width 10%
   .modal-footer
-    position static
+    //position static
+    bottom 0
     border 0
     padding 0
     margin 0
