--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -335,6 +335,11 @@ span
 .ace-spinner .spinner-up:hover {
   background-color: #6fb3e0 !important;
 }
+.empty-basket {
+  font-size: 24px;
+  text-align: center;
+  color: #ccc;
+}
 .modal {
   width: 560px;
   left: 50%;
@@ -424,12 +429,14 @@ span
 }
 .modal-order-end .modal-body-list tbody tr td:first-child {
   padding-right: 0;
+  width: 70%;
 }
 .modal-order-end .modal-body-list tbody tr td {
   padding: 5px;
+  width: 10%;
 }
 .modal-order-end .modal-footer {
-  position: static;
+  bottom: 0;
   border: 0;
   padding: 0;
   margin: 0;
