--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -143,9 +143,13 @@ transform()
     span
       font-weight bold
   .delivery-right
+    padding-left 10px
+    h3
+      font-size 16px
     .input-delivery
-      padding-left 10px
       display none
+      input
+        width 230px
       #delivery-addr
         margin-left 0
   textarea
